--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2e627f8f",
+   "id": "805d80e5",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e1e961ae",
+   "id": "18e0b644",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "56c2d586",
+   "id": "806fece3",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de8b6a1b",
+   "id": "a0e78aa1",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "49d3614f",
+   "id": "164b6835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "609871e6",
+   "id": "f4e9db01",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "514de35a",
+   "id": "4476ba70",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a68cc1",
+   "id": "28eee574",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a60f3e2",
+   "id": "51e3bc30",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f6cc9ca2",
+   "id": "73cb3931",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7a4020c5",
+   "id": "30c3d8b4",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efd43405",
+   "id": "28cbe418",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a33611d1",
+   "id": "4004e6f7",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2d6912cf",
+   "id": "6876a078",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c4fdfe6",
+   "id": "1ceea376",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5fc36dd8",
+   "id": "86bb2784",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b6623689",
+   "id": "683b6462",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6a11ee44",
+   "id": "bcfee137",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bbad3f98",
+   "id": "6c46110f",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a580e7a",
+   "id": "125c4133",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "19c859a3",
+   "id": "f9466d44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4f229212",
+   "id": "d8461d5e",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "97826760",
+   "id": "bec46464",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "354b965b",
+   "id": "81bf84a1",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c72293d",
+   "id": "f61948c9",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bbbe8f5b",
+   "id": "770a7cad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4e06ed53",
+   "id": "cb30d8fe",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0787fedc",
+   "id": "627265d3",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "23df096d",
+   "id": "ceda391a",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "96b8bd3d",
+   "id": "5d9c04af",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29f1e313",
+   "id": "3eb35396",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f70cb462",
+   "id": "05e489f7",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b598ca96",
+   "id": "2a0c189a",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "770743dd",
+   "id": "d6e87ecd",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4f29f39",
+   "id": "6841b12f",
    "metadata": {},
    "source": [
     "# What's in a module?\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "70269ce8",
+   "id": "2f21f8f3",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fa842c2",
+   "id": "8f965ad2",
    "metadata": {},
    "source": [
     "# Unusual attribute names\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5852715e",
+   "id": "edc345bc",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "956b8793",
+   "id": "bac723da",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f58b82dd",
+   "id": "feb163f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8553e740",
+   "id": "b07ca502",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9e7c119b",
+   "id": "b64dcfde",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8209c0f",
+   "id": "4e837e67",
    "metadata": {},
    "source": [
     "# Some of the dunder attributes on every module\n",
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "bb8349a1",
+   "id": "7a8d8997",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ddd3e1be",
+   "id": "d6a80e3e",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "85091a38",
+   "id": "8daf874b",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d3bc6087",
+   "id": "c1992abc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7449aa48",
+   "id": "9f695c22",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b9ec4d14",
+   "id": "13003ca5",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "f72beced",
+   "id": "30c8865c",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e8b2262c",
+   "id": "bf67c958",
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "63a0b7f3",
+   "id": "13efd7bf",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "729eee95",
+   "id": "16e2d773",
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be69d701",
+   "id": "8182d105",
    "metadata": {},
    "source": [
     "# Exercise: Menu\n",
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "37c93770",
+   "id": "a04d67f9",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae840b0d",
+   "id": "d86c6331",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "6c435f83",
+   "id": "1152566c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1922,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "18f2c6f5",
+   "id": "9cbdf532",
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "1a364cab",
+   "id": "f481c585",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3125c60e",
+   "id": "0e963fd9",
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "86fffda2",
+   "id": "3816dc1c",
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "439097d8",
+   "id": "538253b8",
    "metadata": {},
    "source": [
     "# Attributes vs. globals\n",
@@ -2022,8 +2022,56 @@
     "\n",
     "If my module defines `a` and `b`, then those are global variables *in* the module, but to the rest of the world, they're just `mymod.a` and `mymod.b`.\n",
     "\n",
-    "Does it also work the other way around? That is: We have a bunch of special \"dunder\" attributes. In particular, `__name__` might be useful to print when we load e "
+    "Does it also work the other way around? That is: We have a bunch of special \"dunder\" attributes. In particular, `__name__` might be useful to print when we load the module.  Let's try that..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "b7df74a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello from mymod!\n",
+      "Goodbye from mymod!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<module 'mymod' from '/Users/reuven/Courses/Current/OReilly-2022-11Nov-first-steps/mymod.py'>"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reload(mymod)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af1df626",
+   "metadata": {},
+   "source": [
+    "# `__name__` can have two values\n",
+    "\n",
+    "1. It can have the name of the module in it\n",
+    "2. If our program is the first to run from the command line, it'll contain the string `__main__`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2afa35c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
